objects/Sale__c.object
<CustomObject>
    <description>Contains Sales from Dior systems. This object stores the global sale data (total amount, total quantity...); item details are available in Sale Item object.</description>
    <label>POS &amp; Dior.com Purchase</label>
    <nameField>
        <label>Sale Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POS &amp; Dior.com Purchases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>POS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POS</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipName>Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>Market in which Sale was purchased. Is used by sharing rules (security settings) in order to define record visibility per role.</description>
        <label>Market</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>POS_Id__c</fullName>
        <description>Store external ID. Alimented by Sale Inbound Flow. Is used as key to populate Store lookup on Sale object.</description>
        <label>POS Id</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region/State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ShippingCountry__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>StateProvince</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Consumer to which the sale record is related. Relationship is calculated in Sale Inbound Flow based on Sale field Contact_Id__c.</description>
        <label>Consumer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_BC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Filled by Sale Inbound flow. Is based on the number of occurrences of a BC in a Sale&apos;s related Sale items; the BC with the most occurrences becomes Sales&apos;s main BC.</description>
        <label>Main BC</label>
        <referenceTo>BC__c</referenceTo>
        <relationshipName>Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Till_Id__c</fullName>
        <label>Till Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <description>Technical field storing Contact ID in order to perform retry in case relating the two records failed.</description>
        <externalId>true</externalId>
        <label>Consumer Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <description>Promo code filled by consumers on Givenchy website. Alimented by Sale Inbound Flow.</description>
        <label>Promo Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_Id__c</fullName>
        <description>Cylande ticket number, empty for ecommerce sales. Alimented by Sale Inbound Flow.</description>
        <label>Receipt Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCity__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingEmail__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BillingPhone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DataRecovery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DataRecovery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_BC_Text__c</fullName>
        <description>Filled by Sale Inbound flow. If Main BC lookup couldn&apos;t be matched with a record, the BC Id is stored in this field.</description>
        <label>Main BC Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumJobTalend__c</fullName>
        <label>NumJobTalend</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <description>Delivery status for ecommerce sales. Alimented by Sale Inbound Flow.</description>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SENT_TO_ERP</fullName>
                </value>
                <value>
                    <fullName>SHIPPED</fullName>
                </value>
                <value>
                    <fullName>INVOICED</fullName>
                </value>
                <value>
                    <fullName>COMPLETED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShippingCity__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <description>Total amount paid by the consumer. Alimented by Sale Inbound Flow.</description>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillingRegion__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>StateProvince</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShippingEmail__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ShippingPhone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Shipping_Mode__c</fullName>
        <description>Type of carrier selected for sending ecommerce sales (ex. Colissimo). Alimented by Sale Inbound Flow.</description>
        <label>Shipping Mode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>06</fullName>
                    <label>POS</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>E-commerce</label>
                </value>
                <value>
                    <fullName>TBC</fullName>
                    <isActive>false</isActive>
                    <label>TBC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillingAddress__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillingZipCode__c</fullName>
        <label>Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engraving_text__c</fullName>
        <label>Engraving text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Freight_Amount__c</fullName>
        <description>Amount of shipping costs. Alimented by Sale Inbound Flow.</description>
        <label>Freight Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShippingRegion__c</fullName>
        <label>Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <description>Sum of all items&apos; quantities. Alimented by Sale Inbound Flow.</description>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingLastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_SaleItems__c</fullName>
        <label>Count(SaleItems)</label>
        <summaryForeignKey>Sale_Item__c.Sale__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <description>Discount amount applied to the cart. Alimented by Sale Inbound Flow.</description>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expedition_Date__c</fullName>
        <description>Delivery date, for ecommerce only. Alimented by Sale Inbound Flow.</description>
        <label>Expedition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShippingAddress__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCountry__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShippingZipCode__c</fullName>
        <label>Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingFirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_BC_Text_Eco__c</fullName>
        <label>Main BC Text Eco</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingLastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>Sale transaction date. Alimented by Sale Inbound Flow.</description>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Country_Pictogram__c</fullName>
        <formula>CASE(Market__c,
&quot;FR&quot;, IMAGE($CustomMetadata.Flag__mdt.FR.URL__c,&quot;France&quot;),
&quot;IT&quot;, IMAGE($CustomMetadata.Flag__mdt.IT.URL__c,&quot;Italia&quot;),
&quot;ES&quot;, IMAGE($CustomMetadata.Flag__mdt.ES.URL__c,&quot;Spain&quot;),
&quot;RU&quot;, IMAGE($CustomMetadata.Flag__mdt.RU.URL__c,&quot;Russia&quot;),
&quot;PT&quot;, IMAGE($CustomMetadata.Flag__mdt.PT.URL__c,&quot;Portugal&quot;),
&quot;GB&quot;, IMAGE($CustomMetadata.Flag__mdt.GB.URL__c,&quot;United Kingdom&quot;),
&quot;NL&quot;, IMAGE($CustomMetadata.Flag__mdt.NL.URL__c,&quot;Netherlands&quot;),
&quot;BE&quot;, IMAGE($CustomMetadata.Flag__mdt.BE.URL__c,&quot;Belgium&quot;),
&quot;GR&quot;, IMAGE($CustomMetadata.Flag__mdt.GR.URL__c,&quot;Greece&quot;),
&quot;PL&quot;, IMAGE($CustomMetadata.Flag__mdt.PL.URL__c,&quot;Poland&quot;),
&quot;SE&quot;, IMAGE($CustomMetadata.Flag__mdt.SE.URL__c,&quot;Sweden&quot;),
&quot;CH&quot;, IMAGE($CustomMetadata.Flag__mdt.CH.URL__c,&quot;Switzerland&quot;),
&quot;RO&quot;, IMAGE($CustomMetadata.Flag__mdt.RO.URL__c,&quot;Romania&quot;),
&quot;IE&quot;, IMAGE($CustomMetadata.Flag__mdt.IE.URL__c,&quot;Ireland&quot;),
&quot;DK&quot;, IMAGE($CustomMetadata.Flag__mdt.DK.URL__c,&quot;Denmark&quot;),
&quot;AT&quot;, IMAGE($CustomMetadata.Flag__mdt.AT.URL__c,&quot;Austria&quot;),
&quot;DE&quot;, IMAGE($CustomMetadata.Flag__mdt.DE.URL__c,&quot;Germany&quot;),
&quot;FI&quot;, IMAGE($CustomMetadata.Flag__mdt.FI.URL__c,&quot;Finland&quot;),
&quot;LU&quot;, IMAGE($CustomMetadata.Flag__mdt.LU.URL__c,&quot;Luxembourg&quot;),
&quot;CA&quot;, IMAGE($CustomMetadata.Flag__mdt.CA.URL__c,&quot;Canada&quot;),
&quot;US&quot;, IMAGE($CustomMetadata.Flag__mdt.US.URL__c,&quot;USA&quot;),
&quot;BR&quot;, IMAGE($CustomMetadata.Flag__mdt.BR.URL__c,&quot;Brazil&quot;),
&quot;AE&quot;, IMAGE($CustomMetadata.Flag__mdt.EA.URL__c,&quot;United Arab Emirates&quot;),
&quot;CN&quot;, IMAGE($CustomMetadata.Flag__mdt.CN.URL__c,&quot;China&quot;),
&quot;HK&quot;, IMAGE($CustomMetadata.Flag__mdt.HK.URL__c,&quot;Hong Kong&quot;),
&quot;KR&quot;, IMAGE($CustomMetadata.Flag__mdt.KR.URL__c,&quot;South Korea&quot;),
&quot;JP&quot;, IMAGE($CustomMetadata.Flag__mdt.JP.URL__c,&quot;Japan&quot;),
&quot;SG&quot;, IMAGE($CustomMetadata.Flag__mdt.SG.URL__c,&quot;Singapore&quot;),
&quot;TW&quot;, IMAGE($CustomMetadata.Flag__mdt.TW.URL__c,&quot;Taiwan&quot;),
&quot;ID&quot;, IMAGE($CustomMetadata.Flag__mdt.ID.URL__c,&quot;Indonesia&quot;),
&quot;MY&quot;, IMAGE($CustomMetadata.Flag__mdt.MY.URL__c,&quot;Malaysia&quot;),
&quot;NO&quot;, IMAGE($CustomMetadata.Flag__mdt.NO.URL__c,&quot;Norway&quot;),
&quot;AU&quot;, IMAGE($CustomMetadata.Flag__mdt.AU.URL__c,&quot;Australia&quot;),
&quot;CZ&quot;, IMAGE($CustomMetadata.Flag__mdt.CZ.URL__c,&quot;Czech Republic&quot;),
&quot;HU&quot;, IMAGE($CustomMetadata.Flag__mdt.HU.URL__c,&quot;Hungary&quot;),
&quot;SK&quot;, IMAGE($CustomMetadata.Flag__mdt.SK.URL__c,&quot;Slovakia&quot;),
&quot;INT&quot;, IMAGE($CustomMetadata.Flag__mdt.INT.URL__c,&quot;International&quot;),
IMAGE($CustomMetadata.Flag__mdt.INC.URL__c,&quot;Inconnu&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingFirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Consumer_Id__c</fullName>
        <label>Source Consumer Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <formula>VALUE(IF(AND(Discount_Amount__c = 0, Total_Amount__c = 0, Freight_Amount__c = 0), &quot;&quot;, IF(TEXT(Discount_Amount__c / (Total_Amount__c - Freight_Amount__c)) = &quot;0&quot;, &quot;&quot;, TEXT(Discount_Amount__c / (Total_Amount__c - Freight_Amount__c)))))</formula>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pay_By_Call_BC_Name__c</fullName>
        <formula>IF( ISPICKVAL(Source_System__c, &apos;08&apos;), HYPERLINK(  Main_BC__c, Main_BC__r.Name , &quot;_blank&quot;), &apos;&apos;)</formula>
        <label>Pay By Call - BC Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Sale_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>POS &amp; Dior.com Purchases</relationshipLabel>
        <relationshipName>POS_Dior_com_Purchases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Gifts_Quantity__c</fullName>
        <label>Total Gifts Quantity</label>
        <summarizedField>Sale_Item__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Sale_Item__c.Item_Type__c</field>
            <operation>equals</operation>
            <value>GIFT</value>
        </summaryFilterItems>
        <summaryForeignKey>Sale_Item__c.Sale__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transaction_Date_App__c</fullName>
        <label>Transaction_Date_App</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShippingStateProvince__c</fullName>
        <label>State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>StateProvince</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Transaction_Id__c</fullName>
        <description>Unique order Id issued from the original system. Alimented by Sale Inbound Flow.</description>
        <externalId>true</externalId>
        <label>Source Transaction Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Return_Quantity__c</fullName>
        <label>Total Return Quantity</label>
        <summarizedField>Sale_Item__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Sale_Item__c.Item_Type__c</field>
            <operation>equals</operation>
            <value>RETURN</value>
        </summaryFilterItems>
        <summaryForeignKey>Sale_Item__c.Sale__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Local_transaction_date__c</fullName>
        <formula>IF(AND(ISPICKVAL(Source_System__c,&apos;06&apos;), NOT(ISPICKVAL(Market__c,&apos;JP&apos;))), Transaction_Date__c,
IF(AND(ISPICKVAL(Source_System__c,&apos;06&apos;), ISPICKVAL(Market__c,&apos;JP&apos;), $UserRole.Name = &apos;Japan&apos;), Transaction_Date__c - (7/24),
IF(AND(ISPICKVAL(Source_System__c,&apos;08&apos;), ISPICKVAL(Market__c,&apos;JP&apos;), $UserRole.Name = &apos;Japan&apos;), Transaction_Date__c + (2/24),
IF(AND(ISPICKVAL(Source_System__c,&apos;08&apos;), ISPICKVAL(Market__c,&apos;JP&apos;), $UserRole.Name &lt;&gt; &apos;Japan&apos;), Transaction_Date__c + (9/24),
IF(AND(ISPICKVAL(Source_System__c,&apos;08&apos;), OR(ISPICKVAL(Market__c,&apos;US&apos;), ISPICKVAL(Market__c,&apos;CA&apos;)), $UserRole.Name = &apos;NorthAmerica&apos;), Transaction_Date__c + (2/24),
IF(AND(ISPICKVAL(Source_System__c,&apos;08&apos;), OR(ISPICKVAL(Market__c,&apos;US&apos;), ISPICKVAL(Market__c,&apos;CA&apos;)), $UserRole.Name &lt;&gt; &apos;NorthAmerica&apos;), Transaction_Date__c - (4/24),
IF(AND(ISPICKVAL(Source_System__c,&apos;08&apos;), OR(ISPICKVAL(Market__c,&apos;PT&apos;), ISPICKVAL(Market__c,&apos;GB&apos;)), OR($UserRole.Name = &apos;United Kingdom&apos;, $UserRole.Name = &apos;Portugal&apos;)), Transaction_Date__c + (2/24),
IF(AND(ISPICKVAL(Source_System__c,&apos;08&apos;), OR(ISPICKVAL(Market__c,&apos;PT&apos;), ISPICKVAL(Market__c,&apos;GB&apos;)), $UserRole.Name &lt;&gt; &apos;United Kingdom&apos;, $UserRole.Name &lt;&gt; &apos;Portugal&apos; ), Transaction_Date__c + (1/24),
IF(AND(ISPICKVAL(Source_System__c,&apos;08&apos;), ISPICKVAL(Market__c,&apos;RU&apos;), $UserRole.Name &lt;&gt; &apos;Russia&apos;), Transaction_Date__c + (3/24),
IF(AND(ISPICKVAL(Source_System__c,&apos;08&apos;), ISPICKVAL(Market__c,&apos;AE&apos;), $UserRole.Name &lt;&gt; &apos;United Arab Emirates&apos;), Transaction_Date__c + (4/24),
IF(AND(ISPICKVAL(Source_System__c,&apos;08&apos;), ISPICKVAL(Market__c,&apos;TH&apos;), $UserRole.Name &lt;&gt; &apos;Thailand&apos;), Transaction_Date__c + (7/24),
IF(AND(ISPICKVAL(Source_System__c,&apos;08&apos;), ISPICKVAL(Market__c,&apos;AU&apos;), $UserRole.Name &lt;&gt; &apos;Australia&apos;), Transaction_Date__c + (10/24),
IF(AND(ISPICKVAL(Source_System__c,&apos;08&apos;), OR(ISPICKVAL(Market__c,&apos;HK&apos;),ISPICKVAL(Market__c,&apos;TW&apos;), ISPICKVAL(Market__c,&apos;MY&apos;)), $UserRole.Name &lt;&gt; &apos;Taiwan&apos;, $UserRole.Name &lt;&gt; &apos;Hong Kong&apos;, $UserRole.Name &lt;&gt; &apos;Malaysia&apos;), Transaction_Date__c + (8/24),
Transaction_Date__c + (2/24))))))))))))))</formula>
        <label>Local transaction date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cash_On_Delivery_Fee_ET__c</fullName>
        <label>Cash On Delivery Fee ET</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commercial_Organization__c</fullName>
        <description>Stores Market as a code. Alimented by Sale Inbound Flow.</description>
        <label>Commercial Organization</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Store_Lookup_Retry__c</fullName>
        <description>Date/time of the last run of retry process populating Store lookup.</description>
        <label>Last Store Lookup Retry</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Puchased_Quantity__c</fullName>
        <label>Total Puchased Quantity</label>
        <summaryFilterItems>
            <field>Sale_Item__c.Item_Type__c</field>
            <operation>equals</operation>
            <value>SALE</value>
        </summaryFilterItems>
        <summaryForeignKey>Sale_Item__c.Sale__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cash_On_Delivery_Fee_ATI__c</fullName>
        <label>Cash On Delivery Fee ATI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Store_Lookup_Retry_Count__c</fullName>
        <description>Technical field counting the number of runs of the retry process for Store lookup on the record.</description>
        <label>Store Lookup Retry Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Engraving_Quantity__c</fullName>
        <label>Total Engraving Quantity</label>
        <summarizedField>Sale_Item__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Sale_Item__c.Item_Type__c</field>
            <operation>equals</operation>
            <value>ENGRAVING</value>
        </summaryFilterItems>
        <summaryForeignKey>Sale_Item__c.Sale__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transporter_Tracking_URL__c</fullName>
        <description>Delivery tracking URL for ecommerce sales. Alimented by Sale Inbound Flow.</description>
        <label>Transporter Tracking URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Lookup_Retry__c</fullName>
        <description>Date/time of the last run of retry process populating Contact lookup.</description>
        <label>Last Contact Lookup Retry</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Personalized_Gift_Message__c</fullName>
        <label>Personalized Gift Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Lookup_Retry_Count__c</fullName>
        <description>Technical field counting the number of runs of the retry process for Contact lookup on the record.</description>
        <label>Contact Lookup Retry Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Consumer_Ecommerce_Id__c</fullName>
        <label>Source Consumer Ecommerce Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Store</fullName>
        <active>true</active>
        <label>Store</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ecommerce</fullName>
        <active>true</active>
        <label>Ecommerce</label>
    </recordTypes>
</CustomObject>